<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/Coverage_body"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/coverage_body"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/Coverage_neck"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/Coverage_neck"
        app:layout_constraintTop_toBottomOf="@+id/Coverage_neck" />

    <TextView
        android:id="@+id/Name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.109"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.343" />

    <TextView
        android:id="@+id/MainText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Main_text"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.197" />

    <TextView
        android:id="@+id/Pet_height"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/pet_height"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/Coverage_body"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/Coverage_body"
        app:layout_constraintTop_toBottomOf="@+id/Coverage_body" />

    <EditText
        android:id="@+id/Edit_Height"
        android:layout_width="64dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:inputType="numberSigned"
        app:layout_constraintBottom_toBottomOf="@+id/Pet_height"
        app:layout_constraintStart_toEndOf="@+id/Pet_height"
        app:layout_constraintTop_toTopOf="@+id/Pet_height"
        app:layout_constraintVertical_bias="0.888" />

    <TextView
        android:id="@+id/Coverage_neck"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"

        android:text="@string/coverage_neck"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/Name"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/Name"
        app:layout_constraintTop_toBottomOf="@+id/Name" />

    <EditText
        android:id="@+id/Edit_Name"
        android:layout_width="64dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        app:layout_constraintBottom_toBottomOf="@+id/Name"
        app:layout_constraintStart_toEndOf="@+id/Name"
        app:layout_constraintTop_toTopOf="@+id/Name"
        app:layout_constraintVertical_bias="0.388" />

    <EditText
        android:id="@+id/Edit_Neck"
        android:layout_width="64dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:inputType="numberSigned"
        app:layout_constraintBottom_toBottomOf="@+id/Coverage_neck"
        app:layout_constraintStart_toEndOf="@+id/Coverage_neck"
        app:layout_constraintTop_toTopOf="@+id/Coverage_neck"
        app:layout_constraintVertical_bias="0.888" />

    <EditText
        android:id="@+id/Edit_Body"
        android:layout_width="64dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:inputType="numberSigned"
        app:layout_constraintBottom_toBottomOf="@+id/Coverage_body"
        app:layout_constraintStart_toEndOf="@+id/Coverage_body"
        app:layout_constraintTop_toTopOf="@+id/Coverage_body"
        app:layout_constraintVertical_bias="0.444" />


    <Button
        android:id="@+id/Calculate_but"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calculate"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.929"
        />

    <TextView
        android:id="@+id/Size_pet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="172dp"
        android:textSize="20dp"
        app:layout_constraintBottom_toTopOf="@+id/Calculate_but"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/Sizes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="48dp"
        app:layout_constraintBottom_toTopOf="@+id/Calculate_but"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Size_pet" />

    <ImageView
        android:layout_width="120dp"
        android:layout_height="88dp"
        android:layout_marginBottom="4dp"
        android:src="@drawable/dog"
        app:layout_constraintBottom_toTopOf="@+id/MainText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>