<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/historyLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="6dp"
    android:elevation="10dp"
    app:cardCornerRadius="15dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/mainLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <TextView
            android:id="@+id/nicknameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/brown"
            android:textSize="@dimen/large_font_size"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/expandedLayout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Kirby" />

        <TextView
            android:id="@+id/sizeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:textColor="@color/brown"
            android:textSize="@dimen/large_font_size"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/expandedLayout"
            app:layout_constraintEnd_toStartOf="@+id/switcherArrow"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="M" />

        <ImageView
            android:id="@+id/switcherArrow"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/ic_arrow_down"
            app:layout_constraintBottom_toTopOf="@+id/expandedLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/expandedLayout"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/neckMainTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/coverage_neck"
                android:textColor="@color/brown"
                android:textSize="@dimen/small_text_size"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/neckTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/small_margin"
                android:textColor="@color/brown"
                android:textSize="@dimen/small_text_size"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/neckMainTextView"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="50cm" />

            <TextView
                android:id="@+id/mainBodyTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/small_margin"
                android:text="@string/coverage_body"
                android:textColor="@color/brown"
                android:textSize="@dimen/small_text_size"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/neckTextView"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/bodyTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/small_margin"
                android:textColor="@color/brown"
                android:textSize="@dimen/small_text_size"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/mainBodyTextView"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="60cm" />

            <TextView
                android:id="@+id/mainHeightTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/small_margin"
                android:text="@string/pet_height"
                android:textColor="@color/brown"
                android:textSize="@dimen/small_text_size"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/bodyTextView"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/heightTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/small_margin"
                android:textColor="@color/brown"
                android:textSize="@dimen/small_text_size"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/mainHeightTextView"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="55cm" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>